# CChatServer

./: CMakeLists.txt
resources/db/: server.db
resources/db/migrations/: V1__Init.sql
src/: main.c
src/server/: env.h  utils.c  utils.h
src/server/controller/: routes.c  routes.h
src/server/controller/chat/: chat_controller.c  chat_controller.h
src/server/db/connection/sqlite/: sqlite_database.c  sqlite_database.h
src/server/db/repository/: chat_repository.h  message_repository.h  user_repository.h
src/server/db/repository/impl/sqlite/: chat_repository.c  msg_repository.c  user_repository.c
src/server/entity/: chat.c  chat.h  message.c  message.h  user.h
